# AlphaHunter

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_realtime_data.py
scripts/: start_alpha.bat  start_alpha.ps1  start_alpha.sh  stop_alpha.bat  stop_alpha.ps1  stop_alpha.sh  watch_alpha.ps1  watch_alpha.sh
src/alphahunter/: __init__.py  cache.py  config.py  data_fetch.py  filters.py  main.py  output.py  processing.py  realtime_service.py  strategies.py  ui_app.py
src/alphahunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
