[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alphahunter"
version = "0.1.0"
description = "A-share strong stocks screening system using Akshare"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AlphaHunter" }]
dependencies = [
  "akshare>=1.12.35",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "openpyxl>=3.1.0",
  "streamlit>=1.32.0"
]

[project.scripts]
alphahunter = "alphahunter.main:main"
alphahunter-realtime = "alphahunter.realtime_service:run_service"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alphahunter*"]